<resources>
    <string name="app_name">Liquid</string>
    <string name="facebook_app_id">2141376222750633</string>
    <string name="fb_login_protocol_scheme">fb2141376222750633</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="laundry">Laundry</string>
    <string name="my_order">My Order</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="action">Action</string>
    <string name="sign_out">Sign out</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_maps">maps</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
